--- a/app/src/main/res/layout/activity_fees.xml
+++ b/app/src/main/res/layout/activity_fees.xml
@@ -309,12 +309,12 @@
                                 android:layout_marginStart="@dimen/_10sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:singleLine="true"
-                                android:text="@string/signet_account"
+                                android:text="@string/Cogent_account"
                                 android:textColor="@color/xdark_gray"
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/signetAccDollTV"
+                                android:id="@+id/CogentAccDollTV"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -325,7 +325,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/signetAccPerTV"
+                                android:id="@+id/CogentAccPerTV"
                                 android:layout_width="@dimen/_50sdp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="@dimen/_23sdp"
@@ -510,12 +510,12 @@
                                 android:layout_marginStart="@dimen/_10sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:singleLine="true"
-                                android:text="@string/signet_account"
+                                android:text="@string/Cogent_account"
                                 android:textColor="@color/xdark_gray"
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/buytokenSignetDollTV"
+                                android:id="@+id/buytokenCogentDollTV"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -526,7 +526,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/buytokenSignetPerTV"
+                                android:id="@+id/buytokenCogentPerTV"
                                 android:layout_width="@dimen/_50sdp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="@dimen/_23sdp"
