--- a/app/src/main/res/layout/activity_filters.xml
+++ b/app/src/main/res/layout/activity_filters.xml
@@ -446,13 +446,13 @@
                         app:chipMinHeight="@dimen/_32sdp" />
 
                     <com.google.android.material.chip.Chip
-                        android:id="@+id/transSubTypeSignet"
+                        android:id="@+id/transSubTypeCogent"
                         style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Signet"
+                        android:text="Cogent"
                         android:textAlignment="center"
                         android:textColor="@color/chip_text_color"
                         android:textSize="@dimen/_11ssp"
