--- a/app/src/main/res/layout/addpayment_method.xml
+++ b/app/src/main/res/layout/addpayment_method.xml
@@ -235,7 +235,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/layoutSignet"
+                android:id="@+id/layoutCogent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8sdp"
@@ -247,20 +247,20 @@
                 android:paddingBottom="@dimen/_20sdp">
 
                 <ImageView
-                    android:id="@+id/imgSignetLogo"
+                    android:id="@+id/imgCogentLogo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/_12sdp"
-                    android:src="@drawable/ic_signetactive" />
+                    android:src="@drawable/ic_cogentactive" />
 
                 <LinearLayout
                     android:id="@+id/layoutSDetails"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/_20sdp"
-                    android:layout_toLeftOf="@+id/imgSignetArrow"
-                    android:layout_toRightOf="@+id/imgSignetLogo"
+                    android:layout_toLeftOf="@+id/imgCogentArrow"
+                    android:layout_toRightOf="@+id/imgCogentLogo"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -270,16 +270,16 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/tvSignetHead"
+                            android:id="@+id/tvCogentHead"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Signet Account"
+                            android:text="Cogent Account"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
 
                         <TextView
-                            android:id="@+id/tvSignetCount"
+                            android:id="@+id/tvCogentCount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_10sdp"
@@ -290,7 +290,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/tvSignetMsg"
+                        android:id="@+id/tvCogentMsg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
@@ -299,7 +299,7 @@
                         android:textSize="@dimen/_9sdp" />
 
                     <TextView
-                        android:id="@+id/tvSignetCS"
+                        android:id="@+id/tvCogentCS"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_bold"
@@ -309,7 +309,7 @@
                         android:visibility="gone" />
 
                     <TextView
-                        android:id="@+id/tvSignetError"
+                        android:id="@+id/tvCogentError"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_3sdp"
@@ -321,7 +321,7 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/imgSignetArrow"
+                    android:id="@+id/imgCogentArrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
