--- a/app/src/main/res/layout/all_done_signet.xml
+++ b/app/src/main/res/layout/all_done_signet.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
-                android:text="Your Signet Account has been successfully authorized and added to your payment methods."
+                android:text="Your Cogent Account has been successfully authorized and added to your payment methods."
                 android:lineHeight="@dimen/_21ssp"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
