--- a/app/src/main/res/layout/manual_bank_verfication_sucess_failed.xml
+++ b/app/src/main/res/layout/manual_bank_verfication_sucess_failed.xml
@@ -49,187 +49,193 @@
                     android:layout_below="@+id/headerTV"
                     android:layout_marginHorizontal="@dimen/_21sdp"
                     android:layout_marginTop="@dimen/_21sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/bg_bluelight_border"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <ScrollView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_11sdp"
-                        android:layout_marginTop="@dimen/_8sdp"
-                        android:layout_marginBottom="@dimen/_8sdp"
-                        android:orientation="vertical"
-                        android:paddingTop="@dimen/_7sdp"
-                        android:paddingBottom="@dimen/_7sdp">
-
+                        android:scrollbars="none">
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:paddingTop="@dimen/_7sdp"
-                            android:paddingBottom="@dimen/_7sdp">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="Status"
-                                android:textColor="@color/xdark_gray"
-                                android:textSize="@dimen/_11ssp" />
-
-                            <TextView
-                                android:id="@+id/statusTV"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:background="@drawable/bank_status_bg"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:paddingStart="@dimen/_3sdp"
-                                android:paddingEnd="@dimen/_3sdp"
-                                android:text="Approved"
-                                android:textColor="@color/active_green"
-                                android:textSize="@dimen/_10ssp" />
-
-
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/errorDescriptnTV"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/_3sdp"
-                            android:layout_marginBottom="@dimen/_12sdp"
-                            android:fontFamily="@font/opensans_regular"
-                            android:text="Bank verification failed due to error code: {error code - error code description}. Please try again."
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_11ssp"
-                            android:visibility="gone" />
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/_1sdp"
+                            android:layout_marginHorizontal="@dimen/_11sdp"
                             android:layout_marginTop="@dimen/_8sdp"
                             android:layout_marginBottom="@dimen/_8sdp"
-                            android:background="@color/viewcolor" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
+                            android:orientation="vertical"
                             android:paddingTop="@dimen/_7sdp"
                             android:paddingBottom="@dimen/_7sdp">
 
-                            <TextView
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="Name on Account"
-                                android:textColor="@color/xdark_gray"
-                                android:textSize="@dimen/_11ssp" />
+                                android:orientation="horizontal"
+                                android:paddingTop="@dimen/_7sdp"
+                                android:paddingBottom="@dimen/_7sdp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_regular"
+                                    android:text="Status"
+                                    android:textColor="@color/xdark_gray"
+                                    android:textSize="@dimen/_11ssp" />
+
+                                <TextView
+                                    android:id="@+id/statusTV"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/bank_status_bg"
+                                    android:fontFamily="@font/opensans_semibold"
+                                    android:paddingStart="@dimen/_3sdp"
+                                    android:paddingEnd="@dimen/_3sdp"
+                                    android:text="Approved"
+                                    android:textColor="@color/active_green"
+                                    android:textSize="@dimen/_10ssp" />
+
+
+                            </LinearLayout>
 
                             <TextView
-                                android:id="@+id/nameOnBankTV"
+                                android:id="@+id/errorDescriptnTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:gravity="end"
-                                android:text=""
+                                android:layout_marginTop="@dimen/_3sdp"
+                                android:layout_marginBottom="@dimen/_12sdp"
+                                android:fontFamily="@font/opensans_regular"
+                                android:text="Bank verification failed due to error code: {error code - error code description}. Please try again."
                                 android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_11ssp" />
+                                android:textSize="@dimen/_11ssp"
+                                android:visibility="gone" />
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_1sdp"
+                                android:layout_marginTop="@dimen/_8sdp"
+                                android:layout_marginBottom="@dimen/_8sdp"
+                                android:background="@color/viewcolor" />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:paddingTop="@dimen/_7sdp"
+                                android:paddingBottom="@dimen/_7sdp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_regular"
+                                    android:text="Name on Account"
+                                    android:textColor="@color/xdark_gray"
+                                    android:textSize="@dimen/_11ssp" />
+
+                                <TextView
+                                    android:id="@+id/nameOnBankTV"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_semibold"
+                                    android:gravity="end"
+                                    android:text=""
+                                    android:textColor="@color/primary_black"
+                                    android:textSize="@dimen/_11ssp" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:paddingTop="@dimen/_7sdp"
+                                android:paddingBottom="@dimen/_7sdp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_regular"
+                                    android:text="Institution"
+                                    android:textColor="@color/xdark_gray"
+                                    android:textSize="@dimen/_11ssp" />
+
+                                <TextView
+                                    android:id="@+id/bankNameTV"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_semibold"
+                                    android:gravity="end"
+                                    android:text=""
+                                    android:textColor="@color/primary_black"
+                                    android:textSize="@dimen/_11ssp" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:paddingTop="@dimen/_7sdp"
+                                android:paddingBottom="@dimen/_7sdp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_regular"
+                                    android:text="Routing Number"
+                                    android:textColor="@color/xdark_gray"
+                                    android:textSize="@dimen/_11ssp" />
+
+                                <TextView
+                                    android:id="@+id/routingNumTV"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_semibold"
+                                    android:gravity="end"
+                                    android:text=""
+                                    android:textColor="@color/primary_black"
+                                    android:textSize="@dimen/_11ssp" />
+
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:paddingTop="@dimen/_7sdp"
+                                android:paddingBottom="@dimen/_7sdp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_regular"
+                                    android:text="Account Number"
+                                    android:textColor="@color/xdark_gray"
+                                    android:textSize="@dimen/_11ssp" />
+
+                                <TextView
+                                    android:id="@+id/accNumTV"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/opensans_semibold"
+                                    android:gravity="end"
+                                    android:text=""
+                                    android:textColor="@color/primary_black"
+                                    android:textSize="@dimen/_11ssp" />
+                            </LinearLayout>
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:paddingTop="@dimen/_7sdp"
-                            android:paddingBottom="@dimen/_7sdp">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="Institution"
-                                android:textColor="@color/xdark_gray"
-                                android:textSize="@dimen/_11ssp" />
-
-                            <TextView
-                                android:id="@+id/bankNameTV"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:gravity="end"
-                                android:text=""
-                                android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_11ssp" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:paddingTop="@dimen/_7sdp"
-                            android:paddingBottom="@dimen/_7sdp">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="Routing Number"
-                                android:textColor="@color/xdark_gray"
-                                android:textSize="@dimen/_11ssp" />
-
-                            <TextView
-                                android:id="@+id/routingNumTV"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:gravity="end"
-                                android:text=""
-                                android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_11ssp" />
-
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:paddingTop="@dimen/_7sdp"
-                            android:paddingBottom="@dimen/_7sdp">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="Account Number"
-                                android:textColor="@color/xdark_gray"
-                                android:textSize="@dimen/_11ssp" />
-
-                            <TextView
-                                android:id="@+id/accNumTV"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:gravity="end"
-                                android:text=""
-                                android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_11ssp" />
-                        </LinearLayout>
-
-                    </LinearLayout>
-
+                    </ScrollView>
 
                 </LinearLayout>
             </LinearLayout>
